--- a/website.html
+++ b/website.html
@@ -17,7 +17,7 @@ span:hover {
 }
 
 body{
-    background-image: url(file:///Users/samlinguist/Desktop/Sam_New_Website/Moonmoonmoonmoon.gif);
+    background-image: url(Soundwave.gif);
     background-size: cover;
     
     
@@ -49,7 +49,7 @@ body{
     }
 </style>
 <paragraph class="title">
-    Sam Linguist
+    Natalie and Sam are 
 </paragraph>
 </head>
 <br>
