--- a/website.html
+++ b/website.html
@@ -49,20 +49,28 @@ body{
     }
 </style>
 <paragraph class="title">
-    Natalie and Sam are 
+    Natalie and Sam are getting hitched!
 </paragraph>
 </head>
-<br>
+<br><br>
 <body>
 <a class="link-exhibitions" href="Exhibitions/exhibitions.html">
-    exhibitions
+    our story
 </a>
-    <br>
+    <br><br>
 <a class="link-text" href="text/text.html">
-    text
+    travel
 </a>
-<br>
+<br><br>
 <a class="link-cv" href="cv.html">
-    cv
+    things to do
+</a>
+    <br><br>
+<a class="link-cv" href="cv.html">
+    registry
+</a>
+    <br><br>
+<a class="link-cv" href="cv.html">
+    RSVP
 </a>
 </body>
